--- a/style.css
+++ b/style.css
@@ -8,13 +8,12 @@ body {
 body {
   display: flex;
   flex-direction: column;
-  justify-content: center;
   align-items: center;
   min-height: 100vh;
 }
 
 h1 {
-  margin-bottom: 20px;
+  margin: 20px 0;
 }
 
 .selection,
@@ -62,4 +61,11 @@ h1 {
 .battle {
   display: none;
   opacity: 0;
+}
+
+#btn-restart {
+  display: none;
+  margin-top: 20px;
+  padding: 10px;
+  cursor: pointer;
 }
