--- a/style.css
+++ b/style.css
@@ -5,24 +5,43 @@ body {
   box-sizing: border-box;
 }
 
-body {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  min-height: 100vh;
-}
-
 h1 {
   margin: 20px 0;
+  text-align: center;
+}
+
+.main-container {
+  display: flex;
+  justify-content: center;
+  transform: translateX(-5em);
+}
+
+.stats {
+  border: 1px solid #eee;
+  padding: 12px;
+  float: left;
+  height: 18em;
+  width: 5em;
+  box-sizing: content-box;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.stats,
+.selection,
+.battle {
+  border-radius: 3px;
 }
 
 .selection,
 .battle {
   display: flex;
+  border: 1px solid #eee;
 }
 
 .box {
-  border: 1px solid #eeeeee;
   padding: 12px;
   transition: background-color 0.2s;
 }
@@ -32,26 +51,26 @@ h1 {
 }
 
 .selection .box:hover {
-  background-color: #eeeeee;
+  background-color: #eee;
 }
 
 .selection .box:first-child {
-  border-right: none;
+  border-right: 1px solid #eee;
 }
 
-.selection .box:last-child {
-  border-left: none;
+.selection .box:nth-child(3) {
+  border-left: 1px solid #eee;
 }
 
 .battle .box:first-child {
-  border-right: none;
+  border-right: 1px solid #eee;
 }
 
 .box .box-image {
   display: flex;
   align-items: center;
-  width: 200px;
-  height: 20em;
+  width: 180px;
+  height: 18em;
 }
 
 .box .box-image img {
@@ -63,9 +82,13 @@ h1 {
   opacity: 0;
 }
 
-#btn-restart {
+.restart {
   display: none;
   margin-top: 20px;
+  justify-content: center;
+}
+
+#btn-restart {
   padding: 10px;
   cursor: pointer;
 }
