--- a/style.css
+++ b/style.css
@@ -3,20 +3,21 @@ body {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  font-family: 'Rowdies', cursive;
 }
 
 .container {
-  padding: 20px;
 }
 
 h1 {
-  margin: 20px 0;
+  margin: 3.5em 0 20px;
   text-align: center;
 }
 
 .main-content {
   display: flex;
   justify-content: center;
+  /* align-items: center */
 }
 
 .stats {
