--- a/style.css
+++ b/style.css
@@ -6,9 +6,6 @@ body {
   font-family: 'Rowdies', cursive;
 }
 
-.container {
-}
-
 h1 {
   margin: 3.5em 0 20px;
   text-align: center;
@@ -17,12 +14,11 @@ h1 {
 .main-content {
   display: flex;
   justify-content: center;
-  /* align-items: center */
 }
 
 .stats {
   border: 1px solid #eee;
-  padding: 12px;
+  padding: 15px;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -30,6 +26,7 @@ h1 {
   position: fixed;
   bottom: 0;
   line-height: 1.3;
+  font-size: 1.2em;
 }
 
 .stats,
@@ -52,9 +49,7 @@ h1 {
 }
 
 .stats button {
-  padding: 2px;
   margin-top: 5px;
-  cursor: pointer;
 }
 
 .box {
@@ -104,7 +99,14 @@ h1 {
   justify-content: center;
 }
 
-#btn-restart {
+.button {
+  border-radius: 5px;
   padding: 10px;
+  transition: background-color 0.2s;
+  background-color: #fff;
   cursor: pointer;
+}
+
+.button:hover {
+  background-color: #eee;
 }
